# coot

./: Makefile.am  a6.glade  configure.ac  coot-gtk2-try2.glade  coot-gtk2.glade  cootrc.template  libtool  mapview.glade
analysis/: Makefile.am  daca.cc  mogul.cc
compat/: Makefile.am  coot-getopt.h  coot-inhibit-win32-api.h  coot-posix.cc  coot-posix.h  coot-sysdep-c.cc  coot-sysdep-c.h  coot-sysdep.h  coot-win32.cc  coot-win32.h
coords/: Bond_lines.cc  Cartesian.h  Makefile.am  loop-path.cc  mmdb-crystal.cc  mmdb-extras.cc  phenix-geo.cc  utils.cc
coot-utils/: Makefile.am  atom-overlaps.cc  atom-overlaps.hh  bonded-atoms.cc  c-beta-deviations.cc  c-beta-deviations.hh  cablam-markup.cc  coot-coord-extras.cc  coot-coord-utils-glyco.cc  coot-coord-utils.cc  coot-coord-utils.hh  coot-map-utils.cc  coot-rama.hh  coot-shelx-ins.cc  cylinder-with-rotation-translation.cc  cylinder.cc  glyco-torsions.cc  jed-flip.cc  merge-C-and-N-terminii.cc  merge-atom-selections.cc  mmrrcc.cc  mutate.cc  pepflip-using-difference-map.cc  pepflip-using-difference-map.hh  plane-utils.cc  polar-atoms.cc  read-sm-cif.cc  reduce.cc  secondary-structure-headers.cc  slurp-map.cc  test-coot-utils.cc
db-main/: Makefile.am  db-main.cc  db-main.hh
geometry/: Makefile.am  chem_mods.cc  cif-parse-link.cc  cif-parse.cc  dictionary-residue.cc  energy-lib.cc  glyco-tools.cc  link.cc  protein-geometry.cc  protein-geometry.hh  srs-interface.cc  test-geometry.cc
goograph/: Makefile.am
high-res/: Makefile.am
ideal/: Makefile.am  chirals.cc  coot-compare-residues.cc  extra-restraints.cc  extra-restraints.hh  gradients.cc  link-restraints.cc  lv.cc  make-restraints.cc  mini-rsr.cc  ng.cc  refinement-results-t.hh  simple-restraint.cc  simple-restraint.hh  trans-peptide.cc
lbg/: Makefile.am  Makefile.simple  lbg-drag-and-drop.cc  lbg-flev.cc  lbg.cc  lbg.hh  lidia-main.cc  some-coot-utils.cc
lidia-core/: Makefile.am  bond-record-container-t.cc  chemical-feature-clusters.cc  rdkit-interface.cc  rdkit-interface.hh  use-rdkit.hh
ligand/: Makefile.am  chi-angles.cc  find-waters.cc  helix-placement.cc  libres-tracer.cc  libres-tracer.hh  (+11 more)
ntc/: Makefile.am  ntc.cc  ntc.hh  types.cc  types.hh  util.cc  util.hh
ntc/ui/: common.hh  conn_simil_plots_dialog.cc  conn_simil_plots_dialog.glade  conn_simil_plots_dialog.hh  dot_plot.cc  dot_plot.hh  notifications.cc  notifications.hh  ntc_dialog.cc  ntc_dialog.glade  ntc_dialog.hh  plot_widget.cc  plot_widget.hh  util.cc  util.hh
(+159 files in other folders)
